--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "6d5583d8",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
     "plt.title('Распределение возраста пользователей')\n",
     "plt.xlabel('Возраст')\n",
     "plt.ylabel('Количество пользователей')\n",
-    "plt.savefig(\"figures/my_histogram.png\")\n",
+    "plt.savefig(\"figures/histogram.png\")\n",
     "plt.show()\n",
     "df_clean = df[df['purchases'] >= 0]\n",
     "df_clean.boxplot(column='revenue', by='country', grid=False, patch_artist=True)\n",
